<resources>
    <string name="app_name">DEMobileLAB4-Wallmart</string>
    <string name="sign_in">Sign In</string>
    <string name="walmart_image">Walmart Image</string>
    <string name="sign_in_to_your_account">Sign in to your Account</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="don_t_have_a_account">Don\'t have an Account?</string>
    <string name="create_a_account">Create A Account</string>
    <string name="email_address_required">Email Address(required)</string>
    <string name="password_required">Password (required)</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="required_field">* required field</string>
    <string name="first_name">First Name*</string>
    <string name="email_address">Email Address*</string>
    <string name="last_name">Last Name*</string>
    <string name="password">Password*</string>
    <string name="create_account">Create Account</string>
    <string name="product_title">Product Title</string>
    <string name="color_black">color : black</string>
    <string name="item_id_bahs5">Item Id : BAHS5</string>
    <string name="item_description">Item Description :</string>
</resources>